syntax = "proto3";

package v1;

option go_package = "/miner/proto";

import "google/protobuf/empty.proto";

service Miner {
  // GetInfo returns info about the miner
  rpc GetMinerStatus(google.protobuf.Empty) returns (MinerStatus);

  // GetCurrentEPower returns current E-Power
  rpc GetCurrentEPower(google.protobuf.Empty) returns (CurrentEPower);

  // Regiser set or remove a address
  rpc MinerRegiser(MinerRegisterRequest) returns (MinerRegisterResponse);
}

message CurrentEPower {
  uint64 round = 1;

  float total = 2;

  float multiple = 3;
}

message MinerStatus {
  string contractBy = 1;

  string principal = 2;

  string netName = 3;

  string nodeId = 4;

  string nodeIdentity = 5;

  string nodeType = 6;

  int64 registered = 7;
}

message MinerRegisterRequest {
  string principal = 1;
  uint64 type = 2;
  string commit = 3;
}

message MinerRegisterResponse {
  string message = 1;
}
